--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+body {
+  background: rgba(216, 215, 112, 0.5);
+}
+
+h1 {
+  background: rgba(227, 227, 23, 0.804);
   text-align: center;
+  width: 100%;
+  padding: 16px 16px 16px 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#text-of-new-task {
+  padding: 16px 16px 16px 60px;
+  border: none;
+  background-color: antiquewhite;
+  box-shadow: inset 0 -2px 1px rgba(132, 134, 80, 0.155);
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.status+ {
+    background: rgba(129, 183, 147, 0.8);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.status- {
+  background: rgba(225, 166, 166, 0.8);
+}
+
+
+.task-finished {
+    background-color: rgba(136, 131, 131, 0.6);
+
+}
+
+.task-active {
+  background-color: rgba(136, 131, 131, 0.6);
+}
+
+.task-finished span {
+  
+}
+
+.task-finished div {
+  font-style: italic;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
 }
