--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,123 @@
 body {
-  background: rgba(216, 215, 112, 0.5);
+  background-color: black;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 h1 {
-  background: rgba(227, 227, 23, 0.804);
   text-align: center;
   width: 100%;
-  padding: 16px 16px 16px 60px;
-}
-
-#text-of-new-task {
-  padding: 16px 16px 16px 60px;
-  border: none;
-  background-color: antiquewhite;
-  box-shadow: inset 0 -2px 1px rgba(132, 134, 80, 0.155);
-  width: 100%;
-}
-
-.status+ {
-    background: rgba(129, 183, 147, 0.8);
-}
-
-.status- {
-  background: rgba(225, 166, 166, 0.8);
-}
-
-
-.task-finished {
-    background-color: rgba(136, 131, 131, 0.6);
-
-}
-
-.task-active {
-  background-color: rgba(136, 131, 131, 0.6);
-}
-
-
-.task-finished div {
-  font-style: italic;
-  display: flex;
+  color: darkblue;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
+  padding: 10px;
   max-width: 600px;
+  border-radius: 15px;
+  border-style: groove;
+  border-width: 5px;
+  border-color:grey;
+  background-color: wheat;
+}
+
+#text-of-new-task {
+  border-style: groove;
+  border-radius: 5px;
+  background-color: antiquewhite;
+  width: 100%;
+  height: 30px;
+  border-color: grey;
+  border-bottom-width: 5px;
+  border-right-width: 5px;
+  width: 98%;
+}
+
+.task-list {
+  border-radius: 5px;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  border-bottom-color: grey;
+  border-right-color: grey;
+  border-bottom-width: 5px;
+  border-right-width: 5px;
+  padding: 20px;
+  min-height: 200px;
+  max-height: 100%;
+}
+
+.task-list div {
+  height: 30px;
+  align-items: center;
+  border-radius: 5px;
+  border-width: 1px;
+  border-style: none;
+  vertical-align: middle;
+  border-bottom-style: groove;
+}
+
+.task-finished {
+    background-color:  rgb(200, 220, 171);
+}
+.task-finished:hover {
+    background-color:  rgb(160, 220, 171);;
+    border-style: solid;
+}
+
+.task-active {
+  background-color: rgb(247, 220, 171);
+}
+.task-active:hover {
+  background-color: rgb(245, 231, 206);
+  border-style: solid;
+}
+
+.status img {
+  height: 90%;
+}
+
+.task-text {
+
+}
+
+.del-task {
+  display: none;
+  float: right;
+  width: 20px;
+  font-size: large;
+  font-weight: bold;
+}
+.task-active:hover .del-task {
+  color:red;
+  display: inline-block;  
+  cursor: pointer;
+}
+.task-finished:hover .del-task{
+  color:brown;
+  display: flex;
+  cursor: pointer;
+}
+
+button {
+  border-color: silver;
+  border-radius: 5px;
+  background-color: bisque;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.btn:hover {
+  background-color: aliceblue;
+  color: red;
+}
+.btn-disabled {
+  background-color: silver;
+}
+
+.menu {
+  display: flex;
+}
+
+.info {
+  font-size: small;
+  color: indigo;
 }
